--- a/index.html
+++ b/index.html
@@ -42,8 +42,20 @@
     <h1 class="container__titulo"> 
       <b class="container__titulo-negrito">Alura</b>Books
     </h1>
-    </div>
-    <div class="container">
+
+<ul class="lista-menu">
+  <input type="checkbox" id="opcoes_botao" />
+  <label for="opcoes-menu">
+    <li class="opcoes_item">Categorias</li>
+  </label>
+</ul class="lista__menu">
+   <li class="lista__menu-item">
+ <a href="#" class="lista__menu-link">programação</a>    
+   </li>
+  </ul>
+ </ul> 
+</div>
+  <div class="container">
       <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
       <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
       <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
@@ -63,7 +75,7 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="img/Apachekafka.svg"
+        <div class="swiper-slide"><img src="img/ApacheKafka.svg"
             alt="Livro sobre apache kafka e spring boot da alura books"></div>
         <div class="swiper-slide"><img src="img/Liderança.svg"
             alt="Livro sobre liderança em design design da alura books"></div>
