--- a/index.html
+++ b/index.html
@@ -210,8 +210,9 @@
   </section>
 
   <section class="contato">
-    <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-    <p class="contato__texto">
+    <div class="contato-desccrição">
+      <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+      <p class="contato__texto">
       Atualizações de e-books, novos livros, promoções e outros.
     </p>
     <input type="email" placeholder="Cadastre seu e-mail" class="contato__email" />
@@ -219,10 +220,9 @@
 
   <hr />
 
-  <footer class="rodapé">
-    <h2 class="rodapé__titulo">&copy; Turma 2D 2024</h2>
-  </footer>
-
+<section class="contato">
+  <div class="contato-descrição">
+    <h2 class="contato__titulo">Fi
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     const swiper = new Swiper(".swiper", {
@@ -234,6 +234,64 @@
       },
     });
   </script>
-</body>
+ <footer class="rodapé">
+    <h2 class="rodapé__titulo">&copy; Turma 2D 2024</h2>
+    <ul class="ista-rodape">
+      <li class="lista-rodape__titulo">Educação</li>
+      <li class="lista-rodape__item">
+        <img src="img/Caelum.svg" alt="Logo da Caelum" />
+        <a href="#" class="lista-rodape__link">Casa do codigo</a>
+      </li>
 
-</html>
+    
+    </ul>
+  </footer>
+
+       <ul class="ista-rodape">
+      <li class="lista-rodape__titulo">Educação</li>
+      <li class="lista-rodape__item">
+        <img src="img/Caelum.svg" alt="Logo da Caelum" />
+        <a href="#" class="lista-rodape__link">Casa do codigo</a>
+      </li>
+
+          <ul class="ista-rodape">
+      <li class="lista-rodape__titulo">Educação</li>
+      <li class="lista-rodape__item">
+        <img src="img/Caelum.svg" alt="Logo da Caelum" />
+        <a href="#" class="lista-rodape__link">Casa do codigo</a>
+      </li>
+
+             <ul class="ista-rodape">
+      <li class="lista-rodape__titulo">Educação</li>
+      <li class="lista-rodape__item">
+        <img src="img/Caelum.svg" alt="Logo da Caelum" />
+        <a href="#" class="lista-rodape__link">Casa do codigo</a>
+      </li>
+
+                <ul class="ista-rodape">
+      <li class="lista-rodape__titulo">Educação</li>
+      <li class="lista-rodape__item">
+        <img src="img/Caelum.svg" alt="Logo da Caelum" />
+        <a href="#" class="lista-rodape__link">Casa do codigo</a>
+      </li>
+
+ <ul class="ista-rodape">
+      <li class="lista-rodape__titulo">Educação</li>
+      <li class="lista-rodape__item">
+        <img src="img/Caelum.svg" alt="Logo da Caelum" />
+        <a href="#" class="lista-rodape__link">Casa do codigo</a>
+      </li>
+ <ul class="ista-rodape">
+      <li class="lista-rodape__titulo">Educação</li>
+      <li class="lista-rodape__item">
+        <img src="img/Caelum.svg" alt="Logo da Caelum" />
+        <a href="#" class="lista-rodape__link">Casa do codigo</a>
+      </li>
+
+       <ul class="ista-rodape">
+      <li class="lista-rodape__titulo">Educação</li>
+      <li class="lista-rodape__item">
+        <img src="img/Caelum.svg" alt="Logo da Caelum" />
+        <a href="#" class="lista-rodape__link">Casa do codigo</a>
+      </li>
+      
