--- a/index.html
+++ b/index.html
@@ -243,8 +243,17 @@
         <a href="#" class="lista-rodape__link">Casa do codigo</a>
       </li>
 
-    
+      <li class="lista-rodape__item">
+        <img src="img/CasaDoCodigo.svg" alt=Logo da Casa do Codigo" />
+        <a href="#" class="lista-rodape__link">Casa do Codigo</a>
+      </li>
+
+       <li class="lista-rodape__item">
+        <img src="img/CasaDoCodigo.svg" alt=Logo da Casa do Codigo" />
+        <a href="#" class="lista-rodape__link">Casa do Codigo</a>
+      </li>    
     </ul>
+
   </footer>
 
        <ul class="ista-rodape">
