--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
     <h1 class="container__titulo"> 
       <b class="container__titulo-negrito">Alura</b>Books
     </h1>
-
-<ul class="lista-menu">
-  <input type="checkbox" id="opcoes_botao" />
+      
+<ul class="opçÔes">
+  <input type="checkbox" id=class="opcoes-menu" class="opcoes__botao"/>
   <label for="opcoes-menu">
     <li class="opcoes_item">Categorias</li>
   </label>
+  
 </ul class="lista__menu">
    <li class="lista__menu-item">
  <a href="#" class="lista__menu-link">programação</a>    
